src/pydocstyle/snapshots/ruff__pydocstyle__tests__D402_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    NoSignature: ~
  location:
    row: 378
    column: 4
  end_location:
    row: 378
    column: 30
  fix: ~
  parent: ~

