src/pydocstyle/snapshots/ruff__pydocstyle__tests__D408_sections.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    SectionUnderlineAfterName: Returns
  location:
    row: 85
    column: 4
  end_location:
    row: 92
    column: 7
  fix:
    patch:
      content: ""
      location:
        row: 88
        column: 0
      end_location:
        row: 89
        column: 0

