src/pydocstyle/snapshots/ruff__pydocstyle__tests__D410_sections.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    BlankLineAfterSection: Returns
  location:
    row: 67
    column: 4
  end_location:
    row: 78
    column: 7
  fix:
    patch:
      content: "\n"
      location:
        row: 71
        column: 0
      end_location:
        row: 71
        column: 0
- kind:
    BlankLineAfterSection: Returns
  location:
    row: 207
    column: 4
  end_location:
    row: 221
    column: 7
  fix:
    patch:
      content: "\n"
      location:
        row: 218
        column: 0
      end_location:
        row: 218
        column: 0

