src/pydocstyle/snapshots/ruff__pydocstyle__tests__D411_sections.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    BlankLineBeforeSection: Yields
  location:
    row: 67
    column: 4
  end_location:
    row: 78
    column: 7
  fix:
    location:
      row: 71
      column: 0
    end_location:
      row: 71
      column: 0
    content: "\n"
    message: ~
  parent: ~
- kind:
    BlankLineBeforeSection: Returns
  location:
    row: 122
    column: 4
  end_location:
    row: 129
    column: 7
  fix:
    location:
      row: 125
      column: 0
    end_location:
      row: 125
      column: 0
    content: "\n"
    message: ~
  parent: ~
- kind:
    BlankLineBeforeSection: Raises
  location:
    row: 207
    column: 4
  end_location:
    row: 221
    column: 7
  fix:
    location:
      row: 218
      column: 0
    end_location:
      row: 218
      column: 0
    content: "\n"
    message: ~
  parent: ~

