src/pydocstyle/snapshots/ruff__pydocstyle__tests__D412_sections.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    NoBlankLinesBetweenHeaderAndContent: Short summary
  location:
    row: 207
    column: 4
  end_location:
    row: 221
    column: 7
  fix:
    patch:
      content: ""
      location:
        row: 211
        column: 0
      end_location:
        row: 212
        column: 0

