src/pydocstyle/snapshots/ruff__pydocstyle__tests__D417_sections.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    DocumentAllArguments:
      - y
  location:
    row: 283
    column: 4
  end_location:
    row: 293
    column: 16
  fix: ~
- kind:
    DocumentAllArguments:
      - y
  location:
    row: 300
    column: 0
  end_location:
    row: 306
    column: 7
  fix: ~
- kind:
    DocumentAllArguments:
      - test
      - y
      - z
  location:
    row: 324
    column: 4
  end_location:
    row: 330
    column: 11
  fix: ~
- kind:
    DocumentAllArguments:
      - test
      - y
      - z
  location:
    row: 336
    column: 4
  end_location:
    row: 343
    column: 11
  fix: ~
- kind:
    DocumentAllArguments:
      - a
      - y
      - z
  location:
    row: 349
    column: 4
  end_location:
    row: 355
    column: 11
  fix: ~
- kind:
    DocumentAllArguments:
      - a
      - b
  location:
    row: 361
    column: 4
  end_location:
    row: 367
    column: 11
  fix: ~
- kind:
    DocumentAllArguments:
      - y
  location:
    row: 389
    column: 0
  end_location:
    row: 398
    column: 7
  fix: ~
- kind:
    DocumentAllArguments:
      - test
      - y
      - z
  location:
    row: 425
    column: 4
  end_location:
    row: 434
    column: 11
  fix: ~
- kind:
    DocumentAllArguments:
      - test
      - y
      - z
  location:
    row: 440
    column: 4
  end_location:
    row: 453
    column: 11
  fix: ~
- kind:
    DocumentAllArguments:
      - a
      - z
  location:
    row: 459
    column: 4
  end_location:
    row: 469
    column: 11
  fix: ~
- kind:
    DocumentAllArguments:
      - y
  location:
    row: 489
    column: 4
  end_location:
    row: 497
    column: 11
  fix: ~

